secondfile/objects/DHStatus_PL_Group_Port_Data__c.object
<CustomObject>
    <fields>
        <fullName>AVPN_PI_ID__c</fullName>
        <label>AVPN PI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Status__c</fullName>
        <label>Activation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_PrivateLineAccessCircuitData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-PrivateLineAccessCircuitData</label>
        <referenceTo>DHStatus_PrivateLineAccessCircuitData__c</referenceTo>
        <relationshipLabel>DHStatus-PL Group Port Datas</relationshipLabel>
        <relationshipName>DHStatus_PL_Group_Port_Datas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Detail_Premise__c</fullName>
        <formula>DHStatus_PrivateLineAccessCircuitData__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Premise_Number__c</formula>
        <label>DHStatus Update Deal Hash Detail Premise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Detials_ID__c</fullName>
        <formula>DHStatus_PrivateLineAccessCircuitData__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.DHStatus_Update_Deal_Hash_Details__r.Id</formula>
        <label>DHStatus Update Deal Hash Detials ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_IDH_Data_Type__c</fullName>
        <formula>DHStatus_PrivateLineAccessCircuitData__r.DHStatus_Access_Circuit_Data__r.DHStatus_Logical_Provisioning__r.DHStatus_Update_IDH__r.Data_Type__c</formula>
        <label>DHStatus Update IDH Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Port_ID__c</fullName>
        <label>Group Port ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICOREvpnId__c</fullName>
        <label>ICOREvpnId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICore_Site_ID__c</fullName>
        <label>ICore Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPP_Billing_Identifier__c</fullName>
        <label>LPP Billing Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceAddressType__c</fullName>
        <label>ReferenceAddressType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_IP_Address__c</fullName>
        <label>Reference IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Address_Mask__c</fullName>
        <label>V4 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Address_Type__c</fullName>
        <label>V4 LAN Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_IP_Address__c</fullName>
        <label>V4 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Length__c</fullName>
        <label>V4 LAN Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_Address_Mask__c</fullName>
        <label>V4 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_CER_IP_Address__c</fullName>
        <label>V4 WAN CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_IP_Address__c</fullName>
        <label>V4 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_PER_IP_Address__c</fullName>
        <label>V4 WAN PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Address_Mask__c</fullName>
        <label>V6 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Address_Type__c</fullName>
        <label>V6 LAN Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_IP_Address__c</fullName>
        <label>V6 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Length__c</fullName>
        <label>V6 LAN Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_Address_Mask__c</fullName>
        <label>V6 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_CER_IP_Address__c</fullName>
        <label>V6 WAN CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_IP_Address__c</fullName>
        <label>V6 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_Length__c</fullName>
        <label>V6 WAN Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_PER_IP_Address__c</fullName>
        <label>V6 WAN PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aibPIID__c</fullName>
        <label>aibPIID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e2eVPNkey__c</fullName>
        <description>Custom object to store the value</description>
        <label>e2eVPNkey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-PL Group Port Data</label>
    <nameField>
        <displayFormat>DHPLGPD-{000000}</displayFormat>
        <label>DHStatus-PL Group Port Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-PL Group Port Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>